Fixex font size of h2. Now it's not too big.

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.8rem;
+  font-size: 2rem;
 }
 
 h3 {
